--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "react-login-page",
-  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.26.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
