--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.4.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
