--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2"
